--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -1,15 +1,84 @@
-# name: Develop Workflow
+name: Staging Workflow
 
-# on:
-#   push:
-#     branches:
-#       - develop
+on:
+  push:
+    branches:
+      - staging
 
-# jobs:
-#   lamassu_ca_unit_testing:
-#     runs-on: self-hosted
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v2
-#         with:
-#           fetch-depth: 0
+jobs:
+  deploy_staging:
+    name: Deploy / Staging
+    runs-on: self-hosted
+    environment: staging
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      
+      - name: Run unit tests
+        uses: ./.github/workflows/my-action
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: 1.16 
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - name: Build CA DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/ca.dockerfile 
+          tags: 
+            - lamassuiot/lamassu-ca-dev:${{ github.sha }}
+            - lamassuiot/lamassu-ca-dev:latest
+          push: true
+
+      - name: Build Device Manager DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/device-manager.dockerfile 
+          tags: 
+            - lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+            - lamassuiot/lamassu-device-manager-dev:latest
+          push: true
+
+      - name: Build DMS Enroller DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/dms-enroller.dockerfile 
+          tags: 
+            - lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
+            - lamassuiot/lamassu-dms-enroller-dev:latest
+          push: true
+
+      - name: Build Cloud Proxy DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/cloud-proxy.dockerfile 
+          build-args: 
+            - BASE_IMAGE: alpine:3.14
+          tags: 
+            - lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+            - lamassuiot/lamassu-cloud-proxy-dev:latest
+          push: true
+      
+      - name: Clean previous deployment
+        run: |
+          docker stop $(docker ps -a -q)
+          docker rm $(docker ps -a -q)
+          docker system prune -a --volumes
+          rm -r DEPLOY_PATH/*
+      
+      - name: "test"
+        run: ehco ${{ secrets.DEPLOY_PATH }}
+
+      - name: Clone Lamassu Compose repo
+        uses: actions/checkout@v2
+        with:
+          repository: https://github.com/lamassuiot/lamassu-compose
+          ref: develop
+          path: my-tools
