--- a/.github/workflows/staging.yaml
+++ b/.github/workflows/staging.yaml
@@ -11,6 +11,13 @@ jobs:
     runs-on: self-hosted
     environment: staging
     steps:
+      - name: Clean slef-hosted runner working directory 
+        shell: bash
+        run: |
+         cd $RUNNER_WORKSPACE
+         cd ..
+         rm -r *
+        
       - name: Checkout
         uses: actions/checkout@v2
       
