--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,129 +6,129 @@ on:
       - release
 
 jobs:
-  unit_testing_ca:
-    name: Unit Testing CA
-    uses: ./.github/workflows/ca-develop.yaml
+  # unit_testing_ca:
+  #   name: Unit Testing CA
+  #   uses: ./.github/workflows/ca-develop.yaml
 
-  unit_testing_dms_enroller:
-    name: Unit Testing DMS Enroller
-    uses: ./.github/workflows/dms-enroller-develop.yaml
+  # unit_testing_dms_enroller:
+  #   name: Unit Testing DMS Enroller
+  #   uses: ./.github/workflows/dms-enroller-develop.yaml
 
-  unit_testing_device_manager:
-    name: Unit Testing Device Manager
-    uses: ./.github/workflows/device-manager-develop.yaml
+  # unit_testing_device_manager:
+  #   name: Unit Testing Device Manager
+  #   uses: ./.github/workflows/device-manager-develop.yaml
 
-  build_ca_dev_docker_image:
-      name: CA - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:        
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_ca_dev_docker_image:
+  #     name: CA - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:        
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-      - name: Build CA DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/ca.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-ca-dev:${{ github.sha }}
-            lamassuiot/lamassu-ca-dev:latest
-          push: true
+  #     - name: Build CA DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ca.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ca-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ca-dev:latest
+  #         push: true
 
-  build_device_manager_dev_docker_image:
-      name: Device Manager - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_device_manager_dev_docker_image:
+  #     name: Device Manager - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Device Manager DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/device-manager.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
-            lamassuiot/lamassu-device-manager-dev:latest
-          push: true
+  #     - name: Build Device Manager DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/device-manager.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-device-manager-dev:latest
+  #         push: true
 
-  build_dms_enroller_dev_docker_image:
-      name: DMS Enroller - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_dms_enroller_dev_docker_image:
+  #     name: DMS Enroller - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build DMS Enroller DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/dms-enroller.dockerfile
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
-            lamassuiot/lamassu-dms-enroller-dev:latest
-          push: true
+  #     - name: Build DMS Enroller DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/dms-enroller.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-dms-enroller-dev:latest
+  #         push: true
 
-  build_cloud_proxy_dev_docker_image:
-      name: Cloud Proxy - Release DEV docker images
-      needs:
-      - unit_testing_ca
-      - unit_testing_dms_enroller
-      - unit_testing_device_manager
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1 
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+  # build_cloud_proxy_dev_docker_image:
+  #     name: Cloud Proxy - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build Cloud Proxy DEV docker image
-        uses: docker/build-push-action@v2
-        with:
-          file: ci/cloud-proxy.dockerfile 
-          build-args: |
-            BASE_IMAGE=alpine:3.14
-          tags: |
-            lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
-            lamassuiot/lamassu-cloud-proxy-dev:latest
-          push: true
+  #     - name: Build Cloud Proxy DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/cloud-proxy.dockerfile 
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-cloud-proxy-dev:latest
+  #         push: true
 
   deploy_to_release_env:
       name: Deploy to DEV Server
-      needs:
-      - build_ca_dev_docker_image
-      - build_cloud_proxy_dev_docker_image
-      - build_device_manager_dev_docker_image
-      - build_dms_enroller_dev_docker_image
+      # needs:
+      # - build_ca_dev_docker_image
+      # - build_cloud_proxy_dev_docker_image
+      # - build_device_manager_dev_docker_image
+      # - build_dms_enroller_dev_docker_image
       # runs-on: self-hosted
       runs-on: ubuntu-latest
       environment: release
@@ -141,6 +141,10 @@ jobs:
           role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
           role-session-name: ghactionsrolesession
           aws-region: eu-west-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          role-duration-seconds: 3600 #1hour
+
       
       - name: Install dependencies
         uses: actions/setup-node@v3
@@ -149,6 +153,9 @@ jobs:
       
       - name: Install dependencies
         run: npm i -g cdk
+
+      - name: Change context
+        run: cd .github/infrastructure/tests/e2e
 
       - name: CDK synth
         run: cdk synth
