--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -140,13 +140,13 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
           role-session-name: ghactionsrolesession
+          role-skip-session-tagging: true
+          role-duration-seconds: 3600 #1hour
           aws-region: eu-west-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-duration-seconds: 3600 #1hour
 
-      
-      - name: Install dependencies
+      - name: Install node
         uses: actions/setup-node@v3
         with:
           node-version: 16.4.1
