--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -138,10 +138,10 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
-          role-session-name: ghactionsrolesession
-          role-skip-session-tagging: true
-          role-duration-seconds: 3600 #1hour
+          # role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
+          # role-session-name: ghactionsrolesession
+          # role-skip-session-tagging: true
+          # role-duration-seconds: 3600 #1hour
           aws-region: eu-west-1
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
