--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -123,49 +123,67 @@ jobs:
   #         push: true
 
   deploy_to_release_env:
-      name: Deploy to DEV Server
-      # needs:
-      # - build_ca_dev_docker_image
-      # - build_cloud_proxy_dev_docker_image
-      # - build_device_manager_dev_docker_image
-      # - build_dms_enroller_dev_docker_image
-      # runs-on: self-hosted
-      runs-on: ubuntu-latest
-      environment: release
-      permissions:
-        id-token: write
-      steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+    name: Deploy to DEV Server
+    # needs:
+    # - build_ca_dev_docker_image
+    # - build_cloud_proxy_dev_docker_image
+    # - build_device_manager_dev_docker_image
+    # - build_dms_enroller_dev_docker_image
+    # runs-on: self-hosted
+    runs-on: ubuntu-latest
+    environment: release
+    permissions:
+      id-token: write
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          # role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
-          # role-session-name: ghactionsrolesession
-          # role-skip-session-tagging: true
-          # role-duration-seconds: 3600 #1hour
-          aws-region: eu-west-1
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        # role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
+        # role-session-name: ghactionsrolesession
+        # role-skip-session-tagging: true
+        # role-duration-seconds: 3600 #1hour
+        aws-region: eu-west-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - name: Install node
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16.4.1
-      
-      - name: Install dependencies
-        working-directory: .github/infrastructure/tests/e2e
-        run: npm i &&  npm i -g cdk
+    - name: Install node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16.4.1
+    
+    - name: Install dependencies
+      working-directory: .github/infrastructure/tests/e2e
+      run: npm i &&  npm i -g cdk
 
-      - name: CDK synth
-        working-directory: .github/infrastructure/tests/e2e
-        run: cdk synth
+    - name: CDK synth
+      working-directory: .github/infrastructure/tests/e2e
+      run: cdk synth
 
-      - name: CDK deploy
-        working-directory: .github/infrastructure/tests/e2e
-        run: cdk deploy --require-approval never --json --outputs-file cdk-outputs.json
+    - name: CDK deploy
+      working-directory: .github/infrastructure/tests/e2e
+      run: cdk deploy --require-approval never --json --outputs-file cdk-outputs.json
 
-      - name: Cat cdk output
-        working-directory: .github/infrastructure/tests/e2e
-        run: cat cdk-outputs.json
+    - name: Cat cdk output
+      working-directory: .github/infrastructure/tests/e2e
+      run: cat cdk-outputs.json
+
+  integration_test:
+    name: Integration test
+    runs-on: ubuntu-latest
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Git clone Lamassu Compose
+      run: git clone https://github.com/lamassuiot/lamassu-compose -b develop
+
+  ocsp_test:
+    name: Integration test
+    runs-on: ubuntu-latest
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
