--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -96,6 +96,32 @@ jobs:
   #           lamassuiot/lamassu-dms-enroller-dev:latest
   #         push: true
 
+  # build_ocsp_dev_docker_image:
+  #     name: OCSP - Release DEV docker images
+  #     needs:
+  #     - unit_testing_ca
+  #     - unit_testing_dms_enroller
+  #     - unit_testing_device_manager
+  #     # runs-on: self-hosted
+  #     runs-on: ubuntu-latest
+  #     steps:
+  #     - name: Login to DockerHub
+  #       uses: docker/login-action@v1 
+  #       with:
+  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
+  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+  #     - name: Build OCSP DEV docker image
+  #       uses: docker/build-push-action@v2
+  #       with:
+  #         file: ci/ocsp.dockerfile
+  #         build-args: |
+  #           BASE_IMAGE=alpine:3.14
+  #         tags: |
+  #           lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
+  #           lamassuiot/lamassu-ocsp-dev:latest
+  #         push: true
+
   # build_cloud_proxy_dev_docker_image:
   #     name: Cloud Proxy - Release DEV docker images
   #     needs:
@@ -129,11 +155,14 @@ jobs:
     # - build_cloud_proxy_dev_docker_image
     # - build_device_manager_dev_docker_image
     # - build_dms_enroller_dev_docker_image
+    # - build_ocsp_dev_docker_image
     # runs-on: self-hosted
     runs-on: ubuntu-latest
     environment: release
     permissions:
       id-token: write
+    outputs:
+      server-ip: ${{ steps.get-server-ip.outputs.ip }}
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -166,9 +195,11 @@ jobs:
       working-directory: .github/infrastructure/tests/e2e
       run: cdk deploy --require-approval never --json --outputs-file cdk-outputs.json
 
-    - name: Cat cdk output
+    - id: get-server-ip
+      name: cat cdk output
       working-directory: .github/infrastructure/tests/e2e
-      run: cat cdk-outputs.json
+      run: echo "::set-output name=ip::${{ fromJSON(${cat cdk-outputs.json}).LamassuGHActionsE2EStack.EC2Instanceoutput }}"
+
 
   integration_test:
     name: Integration test
@@ -176,11 +207,22 @@ jobs:
     needs:
     - deploy_to_release_env
     steps:
-    - name: Git clone Lamassu Compose
-      run: git clone https://github.com/lamassuiot/lamassu-compose -b develop
+    # - name: Git clone Lamassu Compose
+    #   run: git clone https://github.com/lamassuiot/lamassu-compose -b develop
+    - name: Get IP
+      run: echo ${{ needs.deploy_to_release_env.outputs.server-ip }}
 
   ocsp_test:
-    name: Integration test
+    name: OCSP test
+    runs-on: ubuntu-latest
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+  est_test:
+    name: EST test
     runs-on: ubuntu-latest
     needs:
     - deploy_to_release_env
