--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -196,16 +196,11 @@ jobs:
       run: cdk deploy --require-approval never --json --outputs-file cdk-outputs.json
 
     - id: get-server-ip
-      name: cat cdk output
+      name: Get EC2 IP
       working-directory: .github/infrastructure/tests/e2e
       run: |
-        content=`cat cdk-outputs.json`
-        # the following lines are only required for multi line json
-        content="${content//'%'/'%25'}"
-        content="${content//$'\n'/'%0A'}"
-        content="${content//$'\r'/'%0D'}"
-        # end of optional handling for multi line json
-        ip=fromJSON($content).LamassuGHActionsE2EStack.EC2Instanceoutput
+        apt-get install jq
+        ip=`cat t.json | jq -r .LamassuGHActionsE2EStack.EC2Instanceoutput`
         echo $ip
         echo "::set-output name=ip::$ip"
 
