--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -6,157 +6,156 @@ on:
       - release
 
 jobs:
-  # unit_testing_ca:
-  #   name: Unit Testing CA
-  #   uses: ./.github/workflows/ca-develop.yaml
+  unit_testing_ca:
+    name: Unit Testing CA
+    uses: ./.github/workflows/ca-develop.yaml
 
-  # unit_testing_dms_enroller:
-  #   name: Unit Testing DMS Enroller
-  #   uses: ./.github/workflows/dms-enroller-develop.yaml
+  unit_testing_dms_enroller:
+    name: Unit Testing DMS Enroller
+    uses: ./.github/workflows/dms-enroller-develop.yaml
 
-  # unit_testing_device_manager:
-  #   name: Unit Testing Device Manager
-  #   uses: ./.github/workflows/device-manager-develop.yaml
+  unit_testing_device_manager:
+    name: Unit Testing Device Manager
+    uses: ./.github/workflows/device-manager-develop.yaml
 
-  # build_ca_dev_docker_image:
-  #     name: CA - Release DEV docker images
-  #     needs:
-  #     - unit_testing_ca
-  #     - unit_testing_dms_enroller
-  #     - unit_testing_device_manager
-  #     # runs-on: self-hosted
-  #     runs-on: ubuntu-latest
-  #     steps:        
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  build_ca_dev_docker_image:
+      name: CA - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:        
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
       
-  #     - name: Build CA DEV docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         file: ci/ca.dockerfile
-  #         build-args: |
-  #           BASE_IMAGE=alpine:3.14
-  #         tags: |
-  #           lamassuiot/lamassu-ca-dev:${{ github.sha }}
-  #           lamassuiot/lamassu-ca-dev:latest
-  #         push: true
+      - name: Build CA DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/ca.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-ca-dev:${{ github.sha }}
+            lamassuiot/lamassu-ca-dev:latest
+          push: true
 
-  # build_device_manager_dev_docker_image:
-  #     name: Device Manager - Release DEV docker images
-  #     needs:
-  #     - unit_testing_ca
-  #     - unit_testing_dms_enroller
-  #     - unit_testing_device_manager
-  #     # runs-on: self-hosted
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  build_device_manager_dev_docker_image:
+      name: Device Manager - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build Device Manager DEV docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         file: ci/device-manager.dockerfile 
-  #         build-args: |
-  #           BASE_IMAGE=alpine:3.14
-  #         tags: |
-  #           lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
-  #           lamassuiot/lamassu-device-manager-dev:latest
-  #         push: true
+      - name: Build Device Manager DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/device-manager.dockerfile 
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-device-manager-dev:${{ github.sha }}
+            lamassuiot/lamassu-device-manager-dev:latest
+          push: true
 
-  # build_dms_enroller_dev_docker_image:
-  #     name: DMS Enroller - Release DEV docker images
-  #     needs:
-  #     - unit_testing_ca
-  #     - unit_testing_dms_enroller
-  #     - unit_testing_device_manager
-  #     # runs-on: self-hosted
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  build_dms_enroller_dev_docker_image:
+      name: DMS Enroller - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build DMS Enroller DEV docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         file: ci/dms-enroller.dockerfile
-  #         build-args: |
-  #           BASE_IMAGE=alpine:3.14
-  #         tags: |
-  #           lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
-  #           lamassuiot/lamassu-dms-enroller-dev:latest
-  #         push: true
+      - name: Build DMS Enroller DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/dms-enroller.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-dms-enroller-dev:${{ github.sha }}
+            lamassuiot/lamassu-dms-enroller-dev:latest
+          push: true
 
-  # build_ocsp_dev_docker_image:
-  #     name: OCSP - Release DEV docker images
-  #     needs:
-  #     - unit_testing_ca
-  #     - unit_testing_dms_enroller
-  #     - unit_testing_device_manager
-  #     # runs-on: self-hosted
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  build_ocsp_dev_docker_image:
+      name: OCSP - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build OCSP DEV docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         file: ci/ocsp.dockerfile
-  #         build-args: |
-  #           BASE_IMAGE=alpine:3.14
-  #         tags: |
-  #           lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
-  #           lamassuiot/lamassu-ocsp-dev:latest
-  #         push: true
+      - name: Build OCSP DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/ocsp.dockerfile
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-ocsp-dev:${{ github.sha }}
+            lamassuiot/lamassu-ocsp-dev:latest
+          push: true
 
-  # build_cloud_proxy_dev_docker_image:
-  #     name: Cloud Proxy - Release DEV docker images
-  #     needs:
-  #     - unit_testing_ca
-  #     - unit_testing_dms_enroller
-  #     - unit_testing_device_manager
-  #     # runs-on: self-hosted
-  #     runs-on: ubuntu-latest
-  #     steps:
-  #     - name: Login to DockerHub
-  #       uses: docker/login-action@v1 
-  #       with:
-  #         username: ${{ secrets.DOCKERHUB_USERNAME }}
-  #         password: ${{ secrets.DOCKERHUB_TOKEN }}
+  build_cloud_proxy_dev_docker_image:
+      name: Cloud Proxy - Release DEV docker images
+      needs:
+      - unit_testing_ca
+      - unit_testing_dms_enroller
+      - unit_testing_device_manager
+      # runs-on: self-hosted
+      runs-on: ubuntu-latest
+      steps:
+      - name: Login to DockerHub
+        uses: docker/login-action@v1 
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  #     - name: Build Cloud Proxy DEV docker image
-  #       uses: docker/build-push-action@v2
-  #       with:
-  #         file: ci/cloud-proxy.dockerfile 
-  #         build-args: |
-  #           BASE_IMAGE=alpine:3.14
-  #         tags: |
-  #           lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
-  #           lamassuiot/lamassu-cloud-proxy-dev:latest
-  #         push: true
+      - name: Build Cloud Proxy DEV docker image
+        uses: docker/build-push-action@v2
+        with:
+          file: ci/cloud-proxy.dockerfile 
+          build-args: |
+            BASE_IMAGE=alpine:3.14
+          tags: |
+            lamassuiot/lamassu-cloud-proxy-dev:${{ github.sha }}
+            lamassuiot/lamassu-cloud-proxy-dev:latest
+          push: true
 
   deploy_to_release_env:
     name: Deploy to DEV Server
-    # needs:
-    # - build_ca_dev_docker_image
-    # - build_cloud_proxy_dev_docker_image
-    # - build_device_manager_dev_docker_image
-    # - build_dms_enroller_dev_docker_image
-    # - build_ocsp_dev_docker_image
-    # runs-on: self-hosted
+    needs:
+    - build_ca_dev_docker_image
+    - build_cloud_proxy_dev_docker_image
+    - build_device_manager_dev_docker_image
+    - build_dms_enroller_dev_docker_image
+    - build_ocsp_dev_docker_image
     runs-on: ubuntu-latest
     environment: release
     permissions:
@@ -210,7 +209,7 @@ jobs:
     needs:
     - deploy_to_release_env
     steps:
-    - name: Executing remote ssh commands using password
+    - name: Executing remote ssh commands
       uses: appleboy/ssh-action@master
       with:
         host: ${{ needs.deploy_to_release_env.outputs.server-ip }}
@@ -221,20 +220,20 @@ jobs:
           sleep 60s
           git clone https://github.com/lamassuiot/lamassu-compose -b develop
         
-  # ocsp_test:
-  #   name: OCSP test
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - deploy_to_release_env
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v2
+  ocsp_test:
+    name: OCSP test
+    runs-on: ubuntu-latest
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
 
-  # est_test:
-  #   name: EST test
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #   - deploy_to_release_env
-  #   steps:
-  #   - name: Checkout
-  #     uses: actions/checkout@v2
+  est_test:
+    name: EST test
+    runs-on: ubuntu-latest
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
