--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -199,14 +199,7 @@ jobs:
         ip=`cat cdk-outputs.json | jq -r .LamassuGHActionsE2EStack.EC2Instanceoutput`
         echo "::set-output name=ip::$ip"
 
-  integration_test:
-    name: Integration test
-    runs-on: ubuntu-latest
-    environment: release
-    needs:
-    - deploy_to_release_env
-    steps:
-#     - run: sleep 60s
+    - run: sleep 60s
     - name: Executing remote ssh commands
       uses: appleboy/ssh-action@master
       with:
@@ -246,14 +239,32 @@ jobs:
 
           bash install.sh
 
+  integration_test:
+    name: Integration test
+    runs-on: ubuntu-latest
+    environment: release
+    needs:
+    - deploy_to_release_env
+    steps:
+    - name: Run integration tests
+      uses: appleboy/ssh-action@master
+      with:
+        host: ${{ needs.deploy_to_release_env.outputs.server-ip }}
+        username: ${{ secrets.AWS_SSH_USERNAME }}
+        key: ${{ secrets.AWS_SSH_KEY }}
+        port: ${{ secrets.AWS_SSH_PORT }}
+        script: |
+          git clone https://github.com/lamassuiot/lamassuiot -b release
+
+
   ocsp_test:
     name: OCSP test
     runs-on: ubuntu-latest
     needs:
     - deploy_to_release_env
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Get IP
+      run: echo ${{ needs.deploy_to_release_env.outputs.server-ip }}
 
   est_test:
     name: EST test
@@ -263,3 +274,43 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+  
+  tear_down_test_infra:
+    name: Tear down DEV server
+    runs-on: ubuntu-latest
+    environment: release
+    needs:
+    - integration_test
+    - ocsp_test
+    - est_test
+    steps:
+    - name: Checkout
+      uses: actions/checkout@v2
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        # role-to-assume: arn:aws:iam::345876576284:role/LamassuGHActions
+        # role-session-name: ghactionsrolesession
+        # role-skip-session-tagging: true
+        # role-duration-seconds: 3600 #1hour
+        aws-region: eu-west-1
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+    - name: Install node
+      uses: actions/setup-node@v3
+      with:
+        node-version: 16.4.1
+    
+    - name: Install dependencies
+      working-directory: .github/infrastructure/tests/e2e
+      run: npm i &&  npm i -g cdk
+
+    - name: CDK synth
+      working-directory: .github/infrastructure/tests/e2e
+      run: cdk synth
+
+    - name: CDK Destroy
+      working-directory: .github/infrastructure/tests/e2e
+      run: cdk destroy -f
