--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -145,8 +145,8 @@ jobs:
             lamassuiot/lamassu-cloud-proxy-dev:latest
           push: true
 
-  deploy_to_release_env:
-    name: Deploy to DEV Server
+  create_to_release_env:
+    name: Create DEV Server
     needs:
     - build_ca_dev_docker_image
     - build_cloud_proxy_dev_docker_image
@@ -199,6 +199,13 @@ jobs:
         ip=`cat cdk-outputs.json | jq -r .LamassuGHActionsE2EStack.EC2Instanceoutput`
         echo "::set-output name=ip::$ip"
 
+  deploy_to_dev_server:
+    name: Integration test
+    runs-on: ubuntu-latest
+    environment: release
+    needs:
+    - create_to_release_env
+    steps:
     - run: sleep 60s
     - name: Executing remote ssh commands
       uses: appleboy/ssh-action@master
@@ -244,7 +251,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: release
     needs:
-    - deploy_to_release_env
+    - deploy_to_dev_server
     steps:
     - name: Run integration tests
       uses: appleboy/ssh-action@master
@@ -256,12 +263,11 @@ jobs:
         script: |
           git clone https://github.com/lamassuiot/lamassuiot -b release
 
-
   ocsp_test:
     name: OCSP test
     runs-on: ubuntu-latest
     needs:
-    - deploy_to_release_env
+    - deploy_to_dev_server
     steps:
     - name: Get IP
       run: echo ${{ needs.deploy_to_release_env.outputs.server-ip }}
@@ -270,7 +276,7 @@ jobs:
     name: EST test
     runs-on: ubuntu-latest
     needs:
-    - deploy_to_release_env
+    - deploy_to_dev_server
     steps:
     - name: Checkout
       uses: actions/checkout@v2
